# imitate_wechat

./: .gitignore  CMakeLists.txt  README.md
configs/: system.ini  system.json  system.xml  system2.xml
doc/客户端与服务器通信流程/: user_info.json  通信流程图.vsdx
doc/客户端与服务器通信流程/http/: api_request.json  api_response.json
doc/客户端与服务器通信流程/tcp/: content.json
doc/数据库/: account.txt  account.vsdx  userinfo.vsdx
doc/用户功能/0.创建帐号/: ~$$设计.~vsdx  设计.vsdx
doc/用户功能/0.登录/: 登录.vsdx
doc/翻译/: 设计.vsdx
doc/配置文件解析/: 概述.docx
src/: CMakeLists.txt
src/projects/: CMakeLists.txt
src/projects/common/: CMakeLists.txt  any.hpp  config_file.cpp  config_file.h  config_file_content_parser.cpp  config_file_content_parser.h  config_file_content_parser_handle.h  config_parser.cpp  configfile.cpp  configfile.h  data.cpp  data.h  file_util.cpp  file_util.h  ini_config.cpp  ini_config.h  ini_parser_handle.cpp  platform_define.h  platform_util.cpp  platform_util.h  string_util.cpp  string_util.h  type_struct.h
src/projects/common/configfile/: ini_config.h
src/projects/common/configfile/builder/: config_file_content_builder.cpp  config_file_content_builder.h  config_file_content_builder_handle.cpp  config_file_content_builder_handle_builder.h  ini_builder_handle.h
src/projects/common/configfile/parser/: config_file_content_parser.cpp  config_file_content_parser.h  config_file_content_parser_handle.h  config_file_content_parser_handle_builder.cpp  ini_parser_handle.cpp
src/projects/config_parser/: CMakeLists.txt  config_parser.cpp  config_parser.h
src/projects/configfile/: CMakeLists.txt  config_file.cpp  config_file.h
src/projects/configfile/parser_builder/: ini_config.cpp
src/projects/configfile/parser_builder/builder/: config_file_content_builder.cpp  config_file_content_builder.h  config_file_content_builder_handle.cpp  config_file_content_builder_handle.h  config_file_content_builder_handle_builder.cpp  config_file_content_builder_handle_builder.h  ini_builder_handle.cpp  ini_builder_handle.h  json_builder_handle.cpp  json_builder_handle.h  xml_builder_handle.cpp  xml_builder_handle.h
src/projects/configfile/parser_builder/parser/: config_file_content_parser.cpp  config_file_content_parser.h  config_file_content_parser_handle.cpp  config_file_content_parser_handle.h  config_file_content_parser_handle_builder.cpp  ini_parser_handle.cpp  ini_parser_handle.h  json_parser_handle.cpp  json_parser_handle.h  xml_parser_handle.cpp  xml_parser_handle.h
src/projects/dvd/: CMakeLists.txt  driver.cpp  driver.h  main.cpp
src/projects/http_client/: CMakeLists.txt  client.cpp  client.h
src/projects/http_server/: CMakeLists.txt  server.cpp  server.h
src/projects/http_server/handels/: account_unique_check.cpp  account_unique_check.h  account_verify.h  server_handler.h  server_online.h
src/projects/mysql_client/: CMakeLists.txt  client.cpp  client.h  datatype.h  mysql_delete_set.cpp  mysql_delete_set.h  mysql_insert_set.cpp  mysql_insert_set.h  mysql_query_set.cpp  mysql_query_set.h  mysql_result_set.cpp  mysql_result_set.h  mysql_set.cpp  mysql_set.h  mysql_update_set.cpp  mysql_update_set.h
src/projects/mysqlclienttest/: CMakeLists.txt  main.cpp
src/projects/tcp_client/: CMakeLists.txt  client.cpp  client.h
src/projects/tcp_server/: CMakeLists.txt  connection.hpp  multi_thread_server.cpp  multi_thread_server.h  server.cpp  server.h  server_abstract.h  single_thread_server.cpp  single_thread_server.h  threadpool.hpp
src/projects/tcp_server/handels/: account_verify.cpp  server_online.cpp
src/projects/tcpclienttest/: CMakeLists.txt  main.cpp
src/projects/tcpservertest/: CMakeLists.txt  main.cpp
src/projects/test/: CMakeLists.txt  main.cpp
src/projects/translate/: CMakeLists.txt  translate.cpp  translate.h
src/projects/translater/: CMakeLists.txt  main.cpp
src/projects/util/: CMakeLists.txt  file_util.cpp  file_util.h  platform_util.cpp  platform_util.h  random_number.cpp  random_number.h  random_util.hpp  string_util.cpp  string_util.h
src/projects/wechat_client/: CMakeLists.txt  user_info.cpp  user_info.h  wechat_client.cpp  wechat_client.h
src/projects/wechat_server/: CMakeLists.txt  main.cpp  wechat_server.cpp  wechat_server.h
