ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(configfile)
ADD_SUBDIRECTORY(http_client)
ADD_SUBDIRECTORY(http_server)
ADD_SUBDIRECTORY(wechat_client)
ADD_SUBDIRECTORY(wechat_server)
ADD_SUBDIRECTORY(tcp_client)
ADD_SUBDIRECTORY(tcp_server)
ADD_SUBDIRECTORY(test)
ADD_SUBDIRECTORY(tcpservertest)
ADD_SUBDIRECTORY(tcpclienttest)
ADD_SUBDIRECTORY(mysql_client)
ADD_SUBDIRECTORY(mysqlclienttest)
ADD_SUBDIRECTORY(translate)